# PureAir

./: .gitignore  LICENSE  README.md  docker-compose.yml
Backend/: README.md  docker-compose.yml
Backend/.run/: main.run.xml
Backend/swagger_codegen/: Dockerfile  build.sh  db.json  location_db.json  requirements.txt  run.sh  setup.py
Backend/swagger_codegen/swagger_server/: __main__.py
Backend/swagger_codegen/swagger_server/controllers/: iot_controller.py
Backend/swagger_codegen/swagger_server/models/: __init__.py  date_range.py  get_pollution_info_data.py  pollution_info.py  pollution_upload_data.py  wi_fi_list.py  wi_fi_list_inner.py
Backend/swagger_codegen/swagger_server/our_controllers/: iot_controller.py
Backend/swagger_codegen/swagger_server/swagger/: swagger.yaml
Backend/swagger_codegen/swagger_server/test/: test_iot_controller.py
Database/: clean.sh  docker-compose.yml
Database/populate/: Dockerfile  dataset.json  populate.py
Frontend/: Dockerfile  dataset.py  default.conf.template  docker-compose.yml  index.html  main.js  main.py  user.html  user.js
Frontend/css/: main.css
Frontend/js/: main.js
Hardware/: Cargo.toml  README.md  build.rs
Hardware/src/: co2_sensor.rs  config.rs  main.rs  pollution.rs  temperature.rs  wifi_connection.rs
Hardware/src/api/: mod.rs  put_device_data.rs  update_device_position.rs
Hassio/: README.md  configuration.yaml
