[package]
name = "pureair-firmware"
version = "0.1.0"
authors = ["Andrea Cracco"]
edition = "2021"
categories = ["embedded", "iot", "home-automation"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32", "iot", "home-automation"]
description = "Firmware for PureAir sensor device"
license = "GPL"
readme = "README.md"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]

experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.26", features = ["binstart"] }
embedded-svc = { version = "0.14", features = ["experimental"] }
esp-idf-svc = { version = "0.31", features = ["experimental"] }
esp-idf-hal = "0.26"
embedded-hal = "0.2"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
ds18b20 = "0.1.1"
one-wire-bus = "0.1.1"
smol = "1.2"
serde_json = "1.0.72"
serde = "1.0.130"

[build-dependencies]
embuild = "0.25"
anyhow = "1"
